src/test/deca/context/valid/convFloat-printSimpleOperation.deca
{
    println(2.0 + 2);
}