src/test/deca/context/invalid/while-expressionsArith.deca
{
    while (3 + 4) {
    }
}